--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <ul>
           <li><a href="#">Projects</a></li>
           <li><a href="#">Skills</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#">Vision</a></li>
           <li><a href="#">About</a></li>
         </ul>
       </nav>
@@ -29,11 +29,10 @@
         </div>
         <div class="brand-intro-text">
           <h2>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi
-            officia error eaque nihil, voluptas provident Lorem ipsum dolor sit
-            amet consectetur adipisicing elit. Provident ipsa soluta excepturi
-            natus, vitae odit ipsam recusandae itaque optio fugit at unde iusto
-            totam quam quos, quas, illo quod consectetur.
+            I am an aspiring Technologist dedicated to transforming Bangladesh
+            through innovations in AI, Robotics, Web Development, and other tech
+            fields, while also advancing the economy and inspiring its eSports
+            scene.
           </h2>
         </div>
         <!-- Carousel Slider -->
