--- a/index.html
+++ b/index.html
@@ -34,8 +34,18 @@
             fields, while also advancing the economy and inspiring its eSports
             scene.
           </h2>
+          <button class="hero-button">GET IN TOUCH</button>
         </div>
         <!-- Carousel Slider -->
+      </div>
+
+      <div class="vision">
+        <div class="vision-text">
+          <h2>
+            My vision is to create a world where everyone has access to
+            technology, where everyone can be empowered by technology, and where
+            technology is used to solve real-world problems.
+          </h2>
       </div>
     </main>
   </body>
