--- a/index.html
+++ b/index.html
@@ -39,14 +39,37 @@
         <!-- Carousel Slider -->
       </div>
 
-      <div class="vision">
-        <div class="vision-text">
-          <h2>
-            My vision is to create a world where everyone has access to
-            technology, where everyone can be empowered by technology, and where
-            technology is used to solve real-world problems.
-          </h2>
+      <div class="fields">
+        <div class="field-item">
+          <h3>Web Development</h3><br>
+          <p>
+            I am a web developer with a passion for creating beautiful and
+            functional websites.
+          </p>
+        </div>
+        <div class="field-item">
+          <h3>Robotics</h3><br>
+          <p>
+            I am a robotics enthusiast with a passion for creating innovative
+            solutions to real-world problems.
+          </p>
+        </div>
+      
+      <div class="field-item">
+        <h3>Artificial Intelligence</h3><br>
+        <p>
+          I am an AI enthusiast with a passion for creating intelligent systems
+          that can solve complex problems.
+        </p>
       </div>
+      <div class="field-item">
+        <h3>Electronic Sports</h3><br>
+        <p>
+          I am an eSports enthusiast with a passion for creating innovative
+          solutions to real-world problems.
+        </p>
+      </div>
+    </div>
     </main>
   </body>
 </html>
